--- a/index.html
+++ b/index.html
@@ -65,75 +65,116 @@
 
           <div class="grid grid-cols-3 gap-x-6 gap-y-8 pb-20 mt-2">
             
-            <div class="app-item flex flex-col items-center gap-2">
-              <a href="1-rep-max.html" class="app-icon bg-indigo">
-                <svg class="w-10 h-10 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"/></svg>
-              </a>
-              <span class="text-[11px] font-semibold text-stone-400 text-center">1RM Calc</span>
-            </div>
+<!-- 1 -->
+<div class="app-item flex flex-col items-center gap-2">
+  <a href="test-01.html" class="app-icon bg-indigo">
+    <svg class="w-10 h-10 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+        d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"/>
+    </svg>
+  </a>
+  <span class="text-[11px] font-semibold text-stone-400 text-center">test-01</span>
+</div>
 
-            <div class="app-item flex flex-col items-center gap-2">
-              <a href="body-ratio.html" class="app-icon bg-teal">
-                <svg class="w-10 h-10 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"/></svg>
-              </a>
-              <span class="text-[11px] font-semibold text-stone-400 text-center">Body Ratio</span>
-            </div>
+<!-- 2 -->
+<div class="app-item flex flex-col items-center gap-2">
+  <a href="test-02.html" class="app-icon bg-indigo">
+    <svg class="w-10 h-10 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+        d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"/>
+    </svg>
+  </a>
+  <span class="text-[11px] font-semibold text-stone-400 text-center">test-02</span>
+</div>
 
-            <div class="app-item flex flex-col items-center gap-2">
-              <a href="breathing.html" class="app-icon bg-blue">
-                <svg class="w-10 h-10 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.5 12a7.5 7.5 0 0015 0m-15 0a7.5 7.5 0 1115 0m-15 0H3m16.5 0H21m-1.5 0H12"/></svg>
-              </a>
-              <span class="text-[11px] font-semibold text-stone-400 text-center">Breathing</span>
-            </div>
+<!-- 3 -->
+<div class="app-item flex flex-col items-center gap-2">
+  <a href="test-03.html" class="app-icon bg-indigo">
+    <svg class="w-10 h-10 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+        d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"/>
+    </svg>
+  </a>
+  <span class="text-[11px] font-semibold text-stone-400 text-center">test-03</span>
+</div>
 
-            <div class="app-item flex flex-col items-center gap-2">
-              <a href="cardio.html" class="app-icon bg-orange">
-                <svg class="w-10 h-10 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"/></svg>
-              </a>
-              <span class="text-[11px] font-semibold text-stone-400 text-center">Cardio Test</span>
-            </div>
+<!-- 4 -->
+<div class="app-item flex flex-col items-center gap-2">
+  <a href="test-04.html" class="app-icon bg-indigo">
+    <svg class="w-10 h-10 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+        d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"/>
+    </svg>
+  </a>
+  <span class="text-[11px] font-semibold text-stone-400 text-center">test-04</span>
+</div>
 
-            <div class="app-item flex flex-col items-center gap-2">
-              <a href="food.html" class="app-icon bg-green">
-                <svg class="w-10 h-10 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"/></svg>
-              </a>
-              <span class="text-[11px] font-semibold text-stone-400 text-center">Nutrition</span>
-            </div>
+<!-- 5 -->
+<div class="app-item flex flex-col items-center gap-2">
+  <a href="test-05.html" class="app-icon bg-indigo">
+    <svg class="w-10 h-10 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+        d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"/>
+    </svg>
+  </a>
+  <span class="text-[11px] font-semibold text-stone-400 text-center">test-05</span>
+</div>
 
-            <div class="app-item flex flex-col items-center gap-2">
-              <a href="heart.html" class="app-icon bg-red">
-                <svg class="w-10 h-10 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"/></svg>
-              </a>
-              <span class="text-[11px] font-semibold text-stone-400 text-center">Heart</span>
-            </div>
+<!-- 6 -->
+<div class="app-item flex flex-col items-center gap-2">
+  <a href="test-06.html" class="app-icon bg-indigo">
+    <svg class="w-10 h-10 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+        d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"/>
+    </svg>
+  </a>
+  <span class="text-[11px] font-semibold text-stone-400 text-center">test-06</span>
+</div>
 
-            <div class="app-item flex flex-col items-center gap-2">
-              <a href="strength-balance.html" class="app-icon bg-pink">
-                <svg class="w-10 h-10 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"/></svg>
-              </a>
-              <span class="text-[11px] font-semibold text-stone-400 text-center">Strength Balance</span>
-            </div>
+<!-- 7 -->
+<div class="app-item flex flex-col items-center gap-2">
+  <a href="test-07.html" class="app-icon bg-indigo">
+    <svg class="w-10 h-10 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+        d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"/>
+    </svg>
+  </a>
+  <span class="text-[11px] font-semibold text-stone-400 text-center">test-07</span>
+</div>
 
-            <div class="app-item flex flex-col items-center gap-2">
-              <a href="tally-counter.html" class="app-icon bg-gray">
-                 <span class="text-2xl font-bold">01</span>
-              </a>
-              <span class="text-[11px] font-semibold text-stone-400 text-center">Tally</span>
-            </div>
+<!-- 8 -->
+<div class="app-item flex flex-col items-center gap-2">
+  <a href="test-08.html" class="app-icon bg-indigo">
+    <svg class="w-10 h-10 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+        d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"/>
+    </svg>
+  </a>
+  <span class="text-[11px] font-semibold text-stone-400 text-center">test-08</span>
+</div>
 
-            <div class="app-item flex flex-col items-center gap-2">
-              <a href="timer.html" class="app-icon bg-orange">
-                <svg class="w-10 h-10 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"/></svg>
-              </a>
-              <span class="text-[11px] font-semibold text-stone-400 text-center">Intermitent Timer</span>
-            </div>
+<!-- 9 -->
+<div class="app-item flex flex-col items-center gap-2">
+  <a href="test-09.html" class="app-icon bg-indigo">
+    <svg class="w-10 h-10 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+        d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"/>
+    </svg>
+  </a>
+  <span class="text-[11px] font-semibold text-stone-400 text-center">test-09</span>
+</div>
 
-            <div class="app-item flex flex-col items-center gap-2">
-              <a href="streaching.html" class="app-icon bg-orange">
-                <svg class="w-10 h-10 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"/></svg>
-              </a>
-              <span class="text-[11px] font-semibold text-stone-400 text-center">Streching</span>
-            </div>
+<!-- 10 -->
+<div class="app-item flex flex-col items-center gap-2">
+  <a href="test-10.html" class="app-icon bg-indigo">
+    <svg class="w-10 h-10 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+        d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"/>
+    </svg>
+  </a>
+  <span class="text-[11px] font-semibold text-stone-400 text-center">test-10</span>
+</div>
+
 
           </div>
         </main>
